# SimpleSynth

./: CHANGELOG.md  DFT-Visualizer-Haskell.cabal  README.md  SimpleSynth.cabal  t.txt
app/: DFTVisualizer.hs  FFT.hs  Main.hs  Parser.hs  Sound.hs  Synthesizer.hs  Utils.hs  Wave.hs  t.py  wavreader.py
app/wavfiles/: FD.mp3.asd  FD.wav.asd  SinePy.mp3.asd  SinePy.wav.asd  Syripples.mp3.asd  Syripples.wav.asd  aasdf.,wav  manynotes.mp3.asd  manynotes.wav.asd  sawsqr440hz.temp  sinewave.mp3.asd  sinewave.wav.asd  test.wav.asd  test1.wav.asd  test5.wavb  test9.awav  test9.wawv  wave.qav  wave.wavb  wave.asdfasdfasdfasdf  wtest.twav
