cabal-version:      3.0
name:               DFT-Visualizer-Haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Kristian Sørdal
maintainer:         krisor99@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -fno-warn-missing-signatures -fno-ghci-sandbox

executable DFT-Visualizer-Haskell
    import:           warnings
    main-is:          Main.hs
    other-modules:    Wave,
                      Parser 
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      mtl,
                      matplotlib,
                      aeson,
                      vector,
                      random,
                      gloss,
                      array,
                      carray,
                      fft,
                      dsp,
                      extra,
                      normaldistribution,
                      megaparsec,
                      parser-combinators

    hs-source-dirs:   app
    default-language: Haskell2010
