cabal-version:      3.0
name:               SimpleSynth
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Kristian Sørdal
maintainer:         krisor99@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -fno-warn-missing-signatures -fno-ghci-sandbox

executable SimpleSynth
    import:           warnings
    main-is:          Main.hs
    other-modules:    Wave,
                      Parser,
                      FFT,
                      Sound,
                      Synthesizer,
                      Utils,
                      DFTVisualizer
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      mtl,
                      matplotlib,
                      random,
                      array,
                      carray,
                      dsp,
                      extra,
                      megaparsec,
                      parser-combinators,
                      sdl2-mixer,
                      data-default-class,
                      WAVE,
                      containers

    hs-source-dirs:   app
    default-language: Haskell2010
